# sandbox444

./: .gitignore  README
and_images/: CMakeLists.txt  mainpage.dox  manifest.xml
calign/: CMakeLists.txt  CloudViewer.cpp  CloudViewer.hpp  alignment.cpp  compute_alignment.cpp  compute_alignment.h  segment_object.cpp  segment_object.h  test_minimal.cpp
circle3D/: CMakeLists.txt
circle3D/src/: circle3D.cpp  circle3d.cpp  test.cpp
cloudNormal/: CMakeLists.txt  mainpage.dox  manifest.xml
color_association/: CMakeLists.txt  manifest.xml
display_pointCloud/: CMakeLists.txt  manifest.xml
filter_cloud/: .gitignore  CMakeLists.txt  filter.cpp
filter_cloud_color/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_temp.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cleanup.sh  cloud_ops.h  cmake_install.cmake  filter_color.cpp  filter_color.h  mainpage.dox  manifest.xml  shit  test.cpp
filter_cloud_color/3rdparty_bin/: loggingserver
filter_cloud_color/include/: cloud_ops.h  filter_wrapper.h
filter_cloud_color/include/filter_cloud_color/: geom.h  get_table.h  plane_finding.h
filter_cloud_color/include/filter_cloud_color/utils/: conversions.h
filter_cloud_color/launch/: perception.launch  reconfigured_camera.launch
filter_cloud_color/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/ConvexDecomposition/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/GIMPACTUtils/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/HACD/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/Serialize/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/Serialize/BulletFileLoader/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/Serialize/BulletWorldImporter/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/Extras/glui/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletCollision/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletDynamics/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletMultiThreaded/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletMultiThreaded/GpuSoftBodySolvers/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletMultiThreaded/GpuSoftBodySolvers/CPU/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/MiniCL/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/BulletSoftBody/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/LinearMath/: Makefile  cmake_install.cmake
filter_cloud_color/lib/bullet-2.79/src/MiniCL/: Makefile  cmake_install.cmake
filter_cloud_color/lib/log4cplus-1.1.0-rc3/: CTestTestfile.cmake  Makefile  cmake_install.cmake
filter_cloud_color/lib/log4cplus-1.1.0-rc3/loggingserver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
filter_cloud_color/lib/log4cplus-1.1.0-rc3/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
filter_cloud_color/msg/: ImageCorner.msg
filter_cloud_color/src/: #CMakeLists.txt#  CMakeLists.txt  Makefile  cloud_ops.cpp  cloud_ops.h  cmake_install.cmake  color_point_associater.cpp  color_point_finder.cpp  extract_inds.hpp  filter_color.cpp  filter_color.h  filter_config.cpp  filter_config.h  filter_wrapper.h  get_table.cpp  get_table.h  get_table2.cpp  make_unit.hpp  plane_finding.cpp  surgical_extraction.cpp  surgical_units.hpp  test.cpp
filter_cloud_color/src/filter_cloud_color/msg/: _ImageCorner.py  __init__.py
filter_cloud_color/src/filter_cloud_color/srv/: _Corners.py  __init__.py
filter_cloud_color/src/utils/: CMakeLists.txt  color_detector.cpp  config.cpp  logging.cpp  utils_pcl.cpp  utils_vector.cpp
filter_cloud_color/srv/: Corners.srv  Cut.srv  PointDir.srv
filter_cloud_color/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  conversions.cpp
fold_open_loop/: fold.launch  joints.py  joints.py.old  move.py  newJointPos.txt  reset.py
ghostPR2/: README  ghost_PR2.py  move.py
grabcut/: grabcut.cpp
pnpApp/: pnp.ui  (+7 more)
pr2_surgical_pickup_flap/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_surgical_pickup_flap/src/: line_finding.cpp  line_finding.h  test.cpp
surgical/: CMakeLists.txt  Cut.hpp  Hole.h  Hole.hpp  HoleListModel.hpp  ImageCommunicator.hpp  ListInteractor.hpp  Makefile  NameListModel.cpp  NameListModel.hpp  ROSCommunicator.hpp  SurgicalGUI.cpp  SurgicalGUI.h  main.cpp  model.cpp  model.h  mouseHandler.cpp  surgical_gui.pro  surgical_gui.ui  ui_surgical_gui.h
surgical/example/: Makefile  example  example.pro  main.cpp
surgical/utils/: utils_pcl.cpp
surgicalGUI/: CMakeLists.txt  manifest.xml
surgicalGUI/src/: Cut.hpp  Hole.hpp  ImageCommunicator.hpp  ListInteractor.hpp  ROSCommunicator.hpp  SurgicalGUI.cpp  SurgicalGUI.h  main.cpp  mouseHandler.cpp  mouseHandler.h  surgical_gui.ui
surgicalGUI/utils/: CMakeLists.txt  my_exceptions.h  utils_pcl.h  utils_vector.cpp  utils_vector.h
utils_cv/: CMakeLists.txt  README  mainpage.dox  manifest.xml
utils_cv/include/: hueFilter.hpp
utils_cv/include/utils_cv/: CannyBlur.hpp  HueFilter.hpp  ImageAND.hpp  ImageProcessor.hpp  SaturationFilter.hpp  hueFilter.hpp
utils_cv/src/: CMakeLists.txt  CannyBlur.cpp  HueFilter.cpp  ImageAND.cpp  SaturationFilter.cpp  color_detector.cpp  hueFilter.cpp
utils_pcl/: CMakeLists.txt  mainpage.dox  manifest.xml
utils_pcl/include/utils_pcl/: CloudImageComm.hpp  CloudToImage.hpp  CloudViewer.hpp  circle3d.h  cloud_utils.hpp
utils_pcl/src/: CloudViewer.cpp  cloud_to_image.cpp  cloud_utils.cpp  test_circle.cpp
(+89 files in other folders)
